# local-events-rss

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: rss.yml
data/hilo/: costa_mesa_events.json  culver_city_events.json  culver_city_feed.xml  long_beach_events.json
feeds/: all.xml
feeds/hilo/: costa_mesa.xml  culver_city.xml  long_beach.xml
src/rss/: __init__.py  __main__.py  cli.py  modules.py
src/rss/feed/: __init__.py  _register.py  build.py  paths.py  registry.py  types.py  xml.py
src/rss/hilo/: __init__.py  ops.py  rss.py  scraping.py  stores.py  types.py  upsert.py
