[project]
name = "rss"
version = "0.1.0"
description = "Custom RSS feed scrapers for local events and updates."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "pendulum>=3.2.0",
    "pydantic>=2.13.4",
    "typer>=0.25.1",
]

[project.scripts]
rss = "rss.cli:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
